--- a/style.css
+++ b/style.css
@@ -44,8 +44,10 @@ body {
 
 .home{
     align-items: center;
-    background-image: url(Web/1.jpg);
-    background-size: cover;
+    background: url("img/Coding.png") no-repeat;
+    background-size: 600px 800px;
+    background-position: left 750px top 70px;
+    background-attachment: fixed;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -111,7 +113,49 @@ body {
     color: #00abf0;
 }
 .btn-1 a:hover{
-    background: black;
+    background: #14213d;
     color: #00abf0;
     transition: .5s;
+}
+.icon-1{
+    position: absolute;
+    bottom: -80px;
+    width: 250px;
+   display: flex;
+   justify-content: space-between
+}
+.icon-1 a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background:transparent ;
+    border: 2px solid #00abf0;
+    border-radius: 50%;
+    font-size: 20px;
+    color:#00abf0;
+    text-decoration: none;
+    z-index: 1;
+    overflow: hidden;
+    
+    
+}
+.icon-1 a::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:0;
+    height: 100%;
+    background: #e5e5e5;
+    border-radius: 50%;
+    z-index: -1;
+    transition: .5s;
+}
+    
+.icon-1 a:hover::before{
+    color: gold;
+    width: 100%;
 }
