`Added new community section and updated styles, removed unused image and updated JavaScript function for component toggling.`

--- a/style.css
+++ b/style.css
@@ -443,3 +443,215 @@ margin-top: 200px;
     font-size: 16px;
     margin: 0 20PX;
 }
+.community h1{
+    color: #E5E5E5;
+    margin-left: 300px;
+    font-size: 46px;
+    font-weight: 600;
+}
+.community img{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+.community h6{
+    color: royalblue;
+    font-size: 15px;
+    margin-left: 350px;
+    font-weight: 900;
+}
+.community-1{
+     height: 520px;
+    border-radius: 10px;
+    display: flex;
+    gap:20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    padding: 30px; 
+    
+}
+.community-card{
+    background-color: #081b29;
+    color: #E5E5E5;
+    border-radius: 10px;
+    height:360px;
+    width: 400px;
+    margin-top: 0px;
+}
+.community-card h3{
+    color: royalblue;
+    margin-top: 20px;
+    margin-left: 40px;
+}
+.community-card P{
+    padding: 5px;
+    margin: 10PX;
+}
+.community-card button{
+    background-color: green;
+}
+.community-1 .btn-1{
+    background-color: gold;
+}
+.IC{
+    background-color: #E5E5E5;
+    margin-top: 600px;
+    margin-left: 600px;
+    width: 300px;
+    height: 55px;
+    color: royalblue;
+}
+.SUPPORT{
+    margin-top: 100px;
+    
+}
+.SUPPORT h1{
+    margin-left: 500px;
+    font-size: 50px;
+
+}
+.SUPPORT p{
+    margin-left: 180px;
+    color: #E5E5E5;
+    font-size: 23px;
+
+}
+.SUPPORT h6{
+    color: #E5E5E5;
+    font-size: 20px;
+    margin-left: 250px;
+}
+.SUPPORT{
+    color: royalblue;
+
+}
+#p-1{
+    color: gold;
+    left: -300px;
+    font-size: 30px;
+}
+.SUPPORT .btn-1{
+    
+    margin-left: 500PX;
+}
+.SUPPORT a{
+    background-color: royalblue;
+    border-radius: 5px;
+    height: 60px;
+}
+
+.bot-5 {
+    margin-top: 330px;
+    margin-left: 500px;
+  display: inline-block;
+  padding: 12px 24px;
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
+  border-radius: 6px;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.bot-5:hover {
+  background-color: #14213d;
+  transform: scale(1.05);
+}
+
+
+footer{
+    background: #ebe;
+    padding-top: 50px;
+    margin-top: 100px;
+}
+.container{
+    width: 1140px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+.footer-content{
+    width: 34%;
+}
+h3 {
+    font-size: 28px;
+    margin-bottom: 15px;
+}
+.footer-content p{
+    width: 360px;
+    margin: auto;
+    padding: 5px;
+}
+.footer-content ul{
+    text-align: center;
+}
+.list li{
+    width: 100px;
+    text-align: center;
+    list-style-type: none;
+    padding: 7px;
+    position: relative;
+}
+.list li::before{
+    content: "";
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 100%;
+    width: 0;
+    height: 2px;
+    background-color: red;
+    transition-duration: 5s;
+}
+.list li:hover::before{
+    width: 70px;
+}
+.social-icons{
+    text-align: center;
+    padding: 0;
+    margin-left: -250px;
+    
+}
+.social-icons li{
+    display: inline-block;
+    text-align: center;
+    padding:5px;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    color: red;
+}
+.social-icons i{
+    font-size: 35px;
+    color: #081b29;
+}
+.social-icons i:hover{
+    color: royalblue;
+}
+.bottom-bar{
+    color: #ebe;
+    background: #14213d;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 50px;
+}
+.bottom-bar p{
+    color: gold;
+    margin: 0;
+    font-size: 20px;
+    padding: 7px;
+}
+.footer-content img{
+    width: 100px;
+    height: auto;
+    margin-left: ;
+    
+    width: 180px;
+    height: 120px;
+
+    
+    
+}
