--- a/tutorial.css
+++ b/tutorial.css
@@ -1,33 +1,202 @@
+*{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-family: poppins, sans-serif;
+}
+body {
+    background: #001722;
+}
+.home{
+    align-items: center;
+    background: url("img/Coding.png ") no-repeat;
+   background-size: 1300px 700px;
+    background-position: left px top 70px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 0 7%;
+}
+.home h1{
+  margin-top: 900px;
+  width: 100%;
+  margin-left: 200px;
+  height: 300px;
+  font-size: 50px;
+  color: royalblue;
+  
+}
+.home h3{
+margin-top: 9oopx;
+}
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background: #001722;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    height: 100PX;
 
+}
+
+.logo {
+    font-size: 35px;
+    color: #E5E5E5;
+    text-decoration: none;
+    font-weight: 800;
+}
+.navbar a {
+    border-radius: 5px;
+    color: #ede9e9;
+    font-size: 18px;
+    font-weight: 700;
+    margin-left: 35px;
+    transition: .3s;
+    text-decoration: none;
+    padding: 10px 20px;
+}
+.navbar a:hover,
+.navbar a.active {
+    color: royalblue;
+}
+
+/* Dropdown styles */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    border-radius: 5px;
+    color: #ede9e9;
+    font-size: 18px;
+    font-weight: 700;
+    margin-left: 35px;
+    transition: .3s;
+    text-decoration: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #e5e5e5;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 20px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: 0;
+    color: #001722;
+}
+
+.dropdown-content a:hover {
+    background-color: white;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    color: royalblue;
+}
 #video-section {
-  max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  background-color: #081b29;
+  margin-top: 00px;
 }
 
 #video-controls {
-  margin-bottom: 20px;
+  margin-bottom: 70px;
+
+}
+#video-section h2{
+    color: #E5E5E5;
+    font-size: 60px;
+    font-weight: 700;
+    padding-top: 100px;
+    margin-left: 100px;
+    font-style: italic;
+    max-width: 100%;
+    
+}
+#video-section p{
+    color: white;
+    font-size:17px ;
+    margin-left: 300px;
+    padding: 2px 29px;
+    padding-left: 20px;
+    background-color: royalblue;
+    height: 120px;
+    width: 500px;
+    border: solid #14213d;
+    border-radius: 10px;
+}
+
+#video-section img{
+    height:600px;
+    width: 1300px;
 }
 
 #search-input {
   padding: 5px;
-  width: 200px;
+  width: 240px;
+  background-color: #001722;
+  height: 50px;
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 10px;
+  border-color: royalblue;
+  margin-top: 100px;
 }
 
 button {
   padding: 5px 10px;
-  margin-left: 10px;
+  margin-left: 40px;
+  background-color:#001722;
+  color: white;
+  height: 50px;
+  width: 100px;
+  border-radius: 20px;
+  border-color: royalblue;
+  transition: 0.3s;
+  cursor: pointer;
+}
+button:hover{
+  background-color: royalblue;
 }
 
 .video-item {
   margin-bottom: 20px;
-  border: 1px solid #ddd;
+  border: 3px solid royalblue;
   padding: 10px;
+  background-color: #001722;
+
 }
 
 .video-item h3 {
-  margin-top: 0;
+  margin-top: 10px;
+  font-size: 30px;
+  color: #E5E5E5;
+  font-weight: 700;
 }
+
 
 .delete-btn {
   background-color: #ff4444;
@@ -35,4 +204,116 @@ button {
   border: none;
   padding: 5px 10px;
   cursor: pointer;
+}
+.vid{
+    align-items: center;
+    background: url("img/Coding.png") no-repeat;
+    background-size: 600px 800px;
+    background-position: left 750px top 70px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 0 7%;
+    margin-top: 50px;
+   
+}
+
+footer{
+    background: #14213d;
+    padding-top: 50px;
+    margin-top: 100px;
+}
+.container{
+    width: 1140px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+.footer-content{
+    width: 34%;
+}
+h3 {
+    font-size: 28px;
+    margin-bottom: 15px;
+    color: royalblue;
+}
+.footer-content p{
+    width: 360px;
+    margin: auto;
+    padding: 5px;
+    color: #E5E5E5;
+}
+.list a{
+    color: #E5E5E5;
+    margin-left: 20px;
+}
+.footer-content ul{
+    text-align: center;
+}
+.list li{
+    width: 100px;
+    text-align: center;
+    list-style-type: none;
+    padding: 7px;
+    position: relative;
+}
+.list li::before{
+    content: "";
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 100%;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    transition-duration: 5s;
+}
+.list li:hover::before{
+    width: 70px;
+}
+.social-icons{
+    text-align: center;
+    padding: 0;
+    margin-left: -250px;
+    
+}
+.social-icons li{
+    display: inline-block;
+    text-align: center;
+    padding:5px;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    color: royalblue;
+}
+.social-icons i{
+    font-size: 35px;
+    color: #E5E5E5;
+}
+.social-icons i:hover{
+    color: royalblue;
+}
+.bottom-bar{
+    color: green;
+    background-color: #081b29;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 50px;
+}
+.bottom-bar p{
+    color: #E5E5E5;
+    margin: 0;
+    font-size: 20px;
+    padding: 7px;
+    
+}
+.footer-content img{
+    width: 100px;
+    height: auto;
+    margin-left: ;
+    width: 180px;
+    height: 120px;
+    
 }
