--- a/tutorial.css
+++ b/tutorial.css
@@ -326,7 +326,7 @@ a:hover{
     background-color: #081b29;
     text-align: center;
     padding: 10px 0;
-    margin-top极50px;
+    margin-top: 50px;
 }
 .bottom-bar p{
     color: #E5E5E5;
@@ -338,7 +338,6 @@ a:hover{
 .footer-content img{
     width: 100px;
     height: auto;
-    margin-left: ;
     width: 180px;
     height: 120px;
     
