--- a/projects.css
+++ b/projects.css
@@ -1,3 +1,97 @@
+*{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-family: poppins, sans-serif;
+}
+body {
+    background: #001722;
+}
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background: #001722;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    height: 100PX;
+
+}
+
+.logo {
+    font-size: 35px;
+    color: #E5E5E5;
+    text-decoration: none;
+    font-weight: 800;
+}
+.navbar a {
+    border-radius: 5px;
+    color: #ede9e9;
+    font-size: 18px;
+    font-weight: 700;
+    margin-left: 35px;
+    transition: .3s;
+    text-decoration: none;
+    padding: 10px 20px;
+}
+.navbar a:hover,
+.navbar a.active {
+    color: royalblue;
+}
+
+/* Dropdown styles */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    border-radius: 5px;
+    color: #ede9e9;
+    font-size: 18px;
+    font-weight: 700;
+    margin-left: 35px;
+    transition: .3s;
+    text-decoration: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: 0;
+}
+
+.dropdown-content a:hover {
+    background-color: #E5E5E5;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    color: royalblue;
+}
 
 .container {
     max-width: 1200px;
@@ -234,4 +328,106 @@
         flex-basis: 100%;
         max-width: 100%;
     }
+}
+footer{
+    background-color: #14213d;
+    background: e0e0e0;
+    padding-top: 50px;
+    margin-top: 100px;
+}
+.container-22{
+    width: 1140px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+.footer-content{
+    width: 34%;
+}
+h3 {
+    font-size: 28px;
+    margin-bottom: 15px;
+    color: royalblue;
+}
+.footer-content p{
+    width: 360px;
+    margin: auto;
+    padding: 5px;
+    color: #e5e5e5;
+}
+.footer-content ul{
+    text-align: center;
+}
+.list li{
+    width: 100px;
+    text-align: center;
+    list-style-type: none;
+    padding: 7px;
+    position: relative;
+    color: gold;
+}
+.list li::before{
+    content: "";
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 100%;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    transition-duration: 5s;
+}
+.list a{
+    color: #e8f0fe;
+    margin-left: 10px;
+}
+.list li:hover::before{
+    width: 70px;
+}
+.social-icons{
+    text-align: center;
+    padding: 0;
+    margin-left: -250px;
+    
+}
+.social-icons li{
+    display: inline-block;
+    text-align: center;
+    padding:5px;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    color: royalblue;
+}
+.social-icons i{
+    font-size: 35px;
+    color: #E5E5E5;
+}
+.social-icons i:hover{
+    color: royalblue;
+}
+.bottom-bar{
+    background: #081b29;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 50px;
+}
+.bottom-bar p{
+    color: #E5E5E5;
+    margin: 0;
+    font-size: 20px;
+    padding: 7px;
+}
+.footer-content img{
+    width: 100px;
+    height: auto;
+    margin-left: ;
+    
+    width: 180px;
+    height: 120px;
+
+    
+    
 }
