--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ margin-top: 200px;
       display: block;
 }
 #firstComponent {
-      display: block; /* Show first component by default */
+      display: block; 
 }
 
 .front{
@@ -481,7 +481,7 @@ margin-top: 200px;
 }
 .component-1 h3{
     color: #E5E5E5;
-    margin-top: 10px;
+    
     margin-left: 100px;
     font-size: 20px;
     font-weight: 600;
@@ -489,7 +489,7 @@ margin-top: 200px;
 } 
 .component-1 P{
     color: #E5E5E5;
-    margin-top: 10px;
+    margin-top: 40px;
     margin-left: 20px;
     font-size: 16px;
     margin: 0 20PX;
